--- a/aqw/boost-items/index.html
+++ b/aqw/boost-items/index.html
@@ -1,47 +1,10 @@
 <head>
-<link rel="stylesheet" type="text/css" href="/css/index.css">
-<style>
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-  color: #333;
-  padding: 40px;
-  width: 60%;
-}
-h1 {
-  font-size: 36px;
-  font-weight: bold;
-  margin-top: 40px;
-  margin-bottom: 20px;
-}
-
-p {
-  margin-bottom: 20px;
-}
-		 
-</style>
+<link rel="stylesheet" type="text/css" href="/css/aqw.css">
 
 </head>
 <body>
-		
-<style>
-figure {
-	background-color: gray;
-	display: inline-block;
-	text-align: center;
-	width: 600px;
-}
-figure img {
-	width: 600px;
-}
-</style>
-
-
-<h1 id="introduction">Introduction</h1>
+	<article>
+		<h1 id="introduction">Introduction</h1>
 <p>This article will explain how boosting items work in Adventure Quest Worlds.
 In particular, we will look into the interaction between the following boosts:</p>
 <ul>
@@ -276,4 +239,5 @@ The match checks out. That&amp;rsquo;s a lot of damage!"/><figcaption>
 As it turns out, <a href="http://aqwwiki.wikidot.com/radiant-goddess-of-war">Radiant Goddess of War</a> combines the Awescended boost to rewards with a 50% boost against all 5 races in one armor-slot item that doesn&rsquo;t need enhancements<a href="/img/aqw/peakperformance2.png">.</a></p>
 <h2 id="you-might-not-like-it-but-this-is-what-peak-performance-looks-like">You might not like it, but this is what peak performance looks like</h2>
 <p><img src="/img/aqw/peakperformance.png" alt="Alt text"></p>
+</article>
 </body>
