--- a/aqw/boost-items/index.html
+++ b/aqw/boost-items/index.html
@@ -32,12 +32,12 @@ The per<strong>cent</strong> sign is just an indication of &ldquo;one hundredth&
 <p>Similarly, there&rsquo;s no difference between adding 20% to something, and multiplying it by 120%. Or 1.2.</p>
 </details>
 <p>Suppose you have Exalted Apotheosis boosting your damage by <span style="text-decoration: underline;">51%</span> and Polly Roger giving you a further <span style="text-decoration: underline;">30%</span> against the monster you&rsquo;re fighting.
-You might think that you have an 80% damage boost, but that&rsquo;s not the case.</p>
+You might think that you have an 81% damage boost, but that&rsquo;s not the case.</p>
 <p>By the time Polly&rsquo;s 30% is applied, you&rsquo;re not supposed to add the 30% of your original damage, but 30% of your damage <em>after</em> accounting for Apotheosis.
 This results in a slightly higher number.</p>
 <p>To calculate multiplicative boost, you&hellip; multiply the total values together.</p>
 <p><span style="text-decoration: underline;">151%*130%=195%</span></p>
-<p>In other words, you get a 95% boost, not an 80% one. Multiplicative boosts are more effective when going up.</p>
+<p>In other words, you get a 95% boost, not an 81% one. Multiplicative boosts are more effective when going up.</p>
 <p>In general:</p>
 <ul>
 <li>boosts within the All Out stat stack <strong>additively</strong></li>
@@ -56,7 +56,7 @@ This results in a slightly higher number.</p>
 </li>
 </ul>
 </li>
-<li>the boosts from the above three categories stack <strong>multiplicatively</strong></li>
+<li>the boosts from the above three damage categories stack <strong>multiplicatively</strong></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/ophid.gif"
          alt="Before we begin, let&amp;rsquo;s notice how our friendly Frostval Barbarian hits for 400 damage in one strike without boosts.
@@ -76,21 +76,22 @@ If you have an item boosting these, you will gain increased rewards from killing
 <li><a href="http://aqwwiki.wikidot.com/archfiend-doomlord">ArchFiend DoomLord</a> and <a href="http://aqwwiki.wikidot.com/infernal-flame-pyromancer">Infernal Flame Pyromancer</a> +25%, same as above with an additional damage boost</li>
 <li><a href="http://aqwwiki.wikidot.com/empowered-bonfire-altar">Empowered Bonfire Altar</a> and <a href="http://aqwwiki.wikidot.com/nightmare-carnax-s-guardians">Nightmare Carnax&rsquo;s Guardians</a> +25%, same as AFDL except in the cape slot</li>
 <li><a href="http://aqwwiki.wikidot.com/head-of-the-legion-beast">Head of the Legion Beast</a> +30%</li>
+<li><a href="http://aqwwiki.wikidot.com/kala-s-living-head">Kala&rsquo;s Living Head </a> and <a href="http://aqwwiki.wikidot.com/iara-s-acolyte">Iara&rsquo;s Acolyte </a> +30%, seasonal</li>
 <li><a href="http://aqwwiki.wikidot.com/awescended">Awescended</a> +30% gold, +50% CP and REP, no XP</li>
 </ul>
 <p>With an Awescended set piece, a CP or REP boost item, and a server-wide boost, the highest bonus you can achieve is <span style="text-decoration: underline;">150%*200%*200</span> for a total multiplier or <span style="text-decoration: underline;">600%</span>, which is a <span style="text-decoration: underline;">500%</span> bonus compared to your base rate.</p>
 <p>If you&rsquo;re max level, XP boosts are irrelevant to you.
 CP and REP might be relevant based on what you&rsquo;re doing, and Gold is generally always useful.
-If you do need XP, consider the Legion Beast helm over, or in addition to Awescended.</p>
+If you do need XP, consider the Legion Beast helm or <a href="http://aqwwiki.wikidot.com/drago-s-royal-guard">Drago&rsquo;s Royal Guard</a> helm over, or in addition to, Awescended.</p>
 <p>Therefore the best-in-slot item is <strong>Awescended</strong> or other items with the same boosts.</p>
 <h1 id="damage-to-all-items">Damage to All Items</h1>
 <p>Some weapons increase your damage.
 Here are the most important ones:</p>
 <ul>
-<li><a href="http://aqwwiki.wikidot.com/burning-blade-2">Burning Blade</a> 15%</li>
-<li><a href="http://aqwwiki.wikidot.com/burning-blade-of-abezeth">Burning Blade of Abezeth</a> 30%</li>
-<li><a href="http://aqwwiki.wikidot.com/exalted-apotheosis">Exalted Apotheosis</a> 51%</li>
-<li><a href="http://aqwwiki.wikidot.com/necrotic-sword-of-doom-sword">Necrotic Sword of Doom</a> 51%</li>
+<li><a href="http://aqwwiki.wikidot.com/burning-blade-2">Burning Blade</a> +15%</li>
+<li><a href="http://aqwwiki.wikidot.com/burning-blade-of-abezeth">Burning Blade of Abezeth</a> +30%</li>
+<li><a href="http://aqwwiki.wikidot.com/exalted-apotheosis">Exalted Apotheosis</a> +51%</li>
+<li><a href="http://aqwwiki.wikidot.com/necrotic-sword-of-doom-sword">Necrotic Sword of Doom</a> +51%</li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/apothe.gif"
          alt="As we can see, our friend hits for 604 damage per strike.
@@ -103,6 +104,7 @@ This is exactly what we&amp;rsquo;d expect by multiplying his base 400 hit by th
 This is good because you can use different Enhancements on them.</p>
 <p>Also worth mentioning that you don&rsquo;t have to get this boost from weapons:</p>
 <ul>
+<li><a href="http://aqwwiki.wikidot.com/dalang-sinden">Dalang Sinden</a> +25%</li>
 <li><a href="http://aqwwiki.wikidot.com/archfiend-doomlord">ArchFiend DoomLord</a> and <a href="http://aqwwiki.wikidot.com/infernal-flame-pyromancer">Infernal Flame Pyromancer</a> +35%</li>
 <li><a href="http://aqwwiki.wikidot.com/empowered-bonfire-altar">Empowered Bonfire Altar</a> and <a href="http://aqwwiki.wikidot.com/nightmare-carnax-s-guardians">Nightmare Carnax&rsquo;s Guardians</a> +35%, same as AFDL, except in the cape slot</li>
 </ul>
@@ -132,7 +134,7 @@ You can find out a monster&rsquo;s race by enabling the option to see them and l
 <p>There are weapons that give a <span style="text-decoration: underline;">75%</span> boost to specific races:</p>
 <ul>
 <li>Undead: <a href="http://aqwwiki.wikidot.com/blinding-light-of-destiny-axe">Blinding Light of Destiny</a></li>
-<li>Dragon: <a href="http://aqwwiki.wikidot.com/dragonblade-of-nulgath">DragonBlade of Nulgath</a> and <a href="http://aqwwiki.wikidot.com/dark-dragon-slayer-s-halberd">Dark Dragon Slayer&rsquo;s Halberd </a></li>
+<li>Dragon: <a href="http://aqwwiki.wikidot.com/dragonblade-of-nulgath">DragonBlade of Nulgath</a> (requires membership) and <a href="http://aqwwiki.wikidot.com/dark-dragon-slayer-s-halberd">Dark Dragon Slayer&rsquo;s Halberd </a></li>
 <li>Human: <a href="http://aqwwiki.wikidot.com/prince-darkon-s-poleaxe">Prince Darkon&rsquo;s Poleaxe </a></li>
 <li>Elemental: <a href="http://aqwwiki.wikidot.com/infernal-flame-khopesh">Infernal Flame Khopesh</a></li>
 <li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-blade-of-chaos">Empowered Blade of Chaos</a></li>
@@ -146,7 +148,7 @@ This is lower than the 75% of weapons, but they don&rsquo;t take up your weapon 
 <ul>
 <li>Undead: <a href="http://aqwwiki.wikidot.com/empowered-undead-champion">Empowered Undead Champion</a></li>
 <li>Dragon: <a href="http://aqwwiki.wikidot.com/fire-champion-s-armor">Fire Champion&rsquo;s Armor</a></li>
-<li>Human: <a href="http://aqwwiki.wikidot.com/sepulchure-s-doomknight-armor">Sepulchure&rsquo;s DoomKnight Armor </a> and <a href="http://aqwwiki.wikidot.com/void-beetle-warlord">Void Beetle Warlord</a></li>
+<li>Human: <a href="http://aqwwiki.wikidot.com/sepulchure-s-doomknight-armor">Sepulchure&rsquo;s DoomKnight Armor </a> (51%, member) and <a href="http://aqwwiki.wikidot.com/void-beetle-warlord">Void Beetle Warlord</a></li>
 <li>Elemental: <a href="http://aqwwiki.wikidot.com/malgor-the-shadowlord">Malgor the ShadowLord</a></li>
 <li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-drakath-armor">Empowered Drakath Armor</a></li>
 </ul>
@@ -192,6 +194,7 @@ Though Drakath&amp;rsquo;s armor overrides Polly&amp;rsquo;s Chaos boost, Our fe
 <p>Notable, class-independent sources of an All Out boost are:</p>
 <ul>
 <li><a href="http://aqwwiki.wikidot.com/forge-cape-enhancements">Vainglory</a></li>
+<li><a href="http://aqwwiki.wikidot.com/forge-weapon-enhancements">Elysium</a></li>
 <li><a href="http://aqwwiki.wikidot.com/potent-honor-potion">Honor Potions</a></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/honor.gif"
