--- a/aqw/boost-items/index.html
+++ b/aqw/boost-items/index.html
@@ -76,13 +76,14 @@ If you have an item boosting these, you will gain increased rewards from killing
 <li><a href="http://aqwwiki.wikidot.com/archfiend-doomlord">ArchFiend DoomLord</a> and <a href="http://aqwwiki.wikidot.com/infernal-flame-pyromancer">Infernal Flame Pyromancer</a> +25%, same as above with an additional damage boost</li>
 <li><a href="http://aqwwiki.wikidot.com/empowered-bonfire-altar">Empowered Bonfire Altar</a> and <a href="http://aqwwiki.wikidot.com/nightmare-carnax-s-guardians">Nightmare Carnax&rsquo;s Guardians</a> +25%, same as AFDL except in the cape slot</li>
 <li><a href="http://aqwwiki.wikidot.com/head-of-the-legion-beast">Head of the Legion Beast</a> +30%</li>
+<li><a href="http://aqwwiki.wikidot.com/drago-s-royal-guard">Drago&rsquo;s Royal Guard</a> +35% CP and XP</li>
 <li><a href="http://aqwwiki.wikidot.com/kala-s-living-head">Kala&rsquo;s Living Head </a> and <a href="http://aqwwiki.wikidot.com/iara-s-acolyte">Iara&rsquo;s Acolyte </a> +30%, seasonal</li>
 <li><a href="http://aqwwiki.wikidot.com/awescended">Awescended</a> +30% gold, +50% CP and REP, no XP</li>
 </ul>
 <p>With an Awescended set piece, a CP or REP boost item, and a server-wide boost, the highest bonus you can achieve is <span style="text-decoration: underline;">150%*200%*200</span> for a total multiplier or <span style="text-decoration: underline;">600%</span>, which is a <span style="text-decoration: underline;">500%</span> bonus compared to your base rate.</p>
 <p>If you&rsquo;re max level, XP boosts are irrelevant to you.
 CP and REP might be relevant based on what you&rsquo;re doing, and Gold is generally always useful.
-If you do need XP, consider the Legion Beast helm or <a href="http://aqwwiki.wikidot.com/drago-s-royal-guard">Drago&rsquo;s Royal Guard</a> helm over, or in addition to, Awescended.</p>
+If you do need XP, consider the Legion Beast helm or Dragon&rsquo;s Guard over, or in addition to, Awescended.</p>
 <p>Therefore the best-in-slot item is <strong>Awescended</strong> or other items with the same boosts.</p>
 <h1 id="damage-to-all-items">Damage to All Items</h1>
 <p>Some weapons increase your damage.
@@ -131,6 +132,8 @@ However, self-damage (for example Necromancer&rsquo;s) is also increased.</p>
 <p>There are 7 races in the game, 5 of which are relevant: <strong>Undead, Dragon, Human, Elemental, Chaos</strong>, Drakath, and Orc.
 Yes, Drakath is his own race.
 You can find out a monster&rsquo;s race by enabling the option to see them and looking under their name.</p>
+<p><img src="/img/aqw/showmonstertype.png" alt="Alt text">
+<img src="/img/aqw/showmonstertype2.png" alt="Alt text"></p>
 <p>There are weapons that give a <span style="text-decoration: underline;">75%</span> boost to specific races:</p>
 <ul>
 <li>Undead: <a href="http://aqwwiki.wikidot.com/blinding-light-of-destiny-axe">Blinding Light of Destiny</a></li>
@@ -139,7 +142,7 @@ You can find out a monster&rsquo;s race by enabling the option to see them and l
 <li>Elemental: <a href="http://aqwwiki.wikidot.com/infernal-flame-khopesh">Infernal Flame Khopesh</a></li>
 <li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-blade-of-chaos">Empowered Blade of Chaos</a></li>
 </ul>
-<p>Also worth mentioning that the highest damage boost is offered a race with only a handful of monsters in the game:</p>
+<p>Also worth mentioning that the highest damage boost is offered for a race with only a handful of monsters in the game:</p>
 <ul>
 <li><a href="http://aqwwiki.wikidot.com/chaorrupter-unlocked-ac">Chaorrupter Unlocked</a> 120% to Drakath</li>
 </ul>
