update aqw boosts

--- a/aqw/boost-items/index.html
+++ b/aqw/boost-items/index.html
@@ -139,7 +139,7 @@ You can find out a monster&rsquo;s race by enabling the option to see them and l
 <ul>
 <li>Undead: <a href="http://aqwwiki.wikidot.com/blinding-light-of-destiny-axe">Blinding Light of Destiny</a></li>
 <li>Dragon: <a href="http://aqwwiki.wikidot.com/dragonblade-of-nulgath">DragonBlade of Nulgath</a> (requires membership) and <a href="http://aqwwiki.wikidot.com/dark-dragon-slayer-s-halberd">Dark Dragon Slayer&rsquo;s Halberd </a></li>
-<li>Human: <a href="http://aqwwiki.wikidot.com/prince-darkon-s-poleaxe">Prince Darkon&rsquo;s Poleaxe </a></li>
+<li>Human: <a href="http://aqwwiki.wikidot.com/prince-darkon-s-poleaxe">Prince Darkon&rsquo;s Poleaxe </a> and <a href="http://aqwwiki.wikidot.com/nightmare-carnax-s-battleaxe">Nightmare Carnax&rsquo;s BattleAxe</a></li>
 <li>Elemental: <a href="http://aqwwiki.wikidot.com/infernal-flame-khopesh">Infernal Flame Khopesh</a></li>
 <li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-blade-of-chaos">Empowered Blade of Chaos</a></li>
 </ul>
@@ -154,7 +154,7 @@ This is lower than the 75% of weapons, but they don&rsquo;t take up your weapon 
 <li>Dragon: <a href="http://aqwwiki.wikidot.com/fire-champion-s-armor">Fire Champion&rsquo;s Armor</a></li>
 <li>Human: <a href="http://aqwwiki.wikidot.com/sepulchure-s-doomknight-armor">Sepulchure&rsquo;s DoomKnight Armor </a> (51%, member) and <a href="http://aqwwiki.wikidot.com/void-beetle-warlord">Void Beetle Warlord</a></li>
 <li>Elemental: <a href="http://aqwwiki.wikidot.com/malgor-the-shadowlord">Malgor the ShadowLord</a></li>
-<li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-drakath-armor">Empowered Drakath Armor</a></li>
+<li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-drakath-armor">Empowered Drakath Armor</a> and <a href="http://aqwwiki.wikidot.com/hollowborn-envoy-of-chaos">Hollowborn Envoy of Chaos</a></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/champion.gif"
          alt="Frostval Barbarian is kind and helpful, but he does prefer simpler numbers.
@@ -234,8 +234,8 @@ It also results in higher healing.</p>
 <p>Alternatively, we can replace the NSoD with a racial weapon if we only care about damage and we don&rsquo;t mind the inconvenience. In this case, it&rsquo;s good to have an AFDL or equivalent equipped so that we retain a solid All-boost.</p>
 <figure><img src="/img/aqw/boostgifs/all.gif"
          alt="151%*150%*175% = 3.96
-The match checks out. That&amp;rsquo;s a lot of damage!"/><figcaption>
-            <h4>Combined</h4><p>151%*150%*175% = 3.96<br>The match checks out. That&rsquo;s a lot of damage!</p>
+The math checks out. That&amp;rsquo;s a lot of damage!"/><figcaption>
+            <h4>Combined</h4><p>151%*150%*175% = 3.96<br>The math checks out. That&rsquo;s a lot of damage!</p>
         </figcaption>
 </figure>
 
