add images to malgor guide

--- a/aqw/malgor/index.html
+++ b/aqw/malgor/index.html
@@ -78,6 +78,7 @@ Everyone needs to Taunt at some point.</p>
 <p>All stand <span style="text-decoration: underline;">equal</span> beneath the eyes of the Eternal.</p>
 </blockquote>
 <p>However, you will more likely to recognize it by the big red square. If you run out of the square, you won&rsquo;t get hit.</p>
+<p><img src="/img/aqw/malgorsquare.png" alt=""></p>
 <p>If you were recently afflicted by <strong>Truth</strong> or <strong>Listen</strong>, then this will kill you.</p>
 <p>Otherwise, it will cleanse the infinitely-stacking debuff from Malgor&rsquo;s basic attack.</p>
 <p>If there&rsquo;s more than one player in the zone, it deals increased damage, likely killing all of them.</p>
@@ -113,12 +114,14 @@ If it&rsquo;s your first time, I recommend you do try this class first.</p>
 Spam your skills as they cool down.
 If you want to do slightly more, you can watch when ArchPaladin heals, and use your own heal ~2 seconds after it to space them out.</p>
 <p>The one tricky thing is how you&rsquo;re expected to taunt Listens that happen before Equals. If you remember, Listen is a stun, and if you&rsquo;re stunned, you can&rsquo;t run outside the zone when Equal comes. To avoid this problem, simply input the movement command <em>before</em> the stun hits you.</p>
+<p><img src="/img/aqw/loorun.gif" alt=""></p>
 <h2 id="archpaladin">ArchPaladin</h2>
 <p>ArchPaladin has the easiest Taunt cycle in the standard rotation, but it does need to pay a bit of attention to its 4-5 combo.</p>
 <p>People might suggest you use 4, then 5 for the damage boost, or to not use 5 at all to keep the damage debuff on Malgor. Both are incorrect.
 You should use 4, wait for it to <em>almost</em> expire, and then cast 5.
 This way the damage reduction lasts almost the entire duration on Malgor, and you can still stack your own damage increase.</p>
 <p>In practice, this looks like keeping the &ldquo;clock arms&rdquo; of the two cooldown timers opposite each other.</p>
+<p><img src="/img/aqw/aploop.gif" alt=""></p>
 <p>Just like LoO, you can time your heals.</p>
 <h2 id="legion-revenant">Legion Revenant</h2>
 <p>Legion Revenant can be relatively difficult - I don&rsquo;t recommend it for beginners.
