improve head template

--- a/aqw/boost-items/index.html
+++ b/aqw/boost-items/index.html
@@ -1,9 +1,15 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/aqw.css">
+<link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>
+	AQW Boost Items
+</title>
 
 </head>
 <body>
+	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Boost Items</p>
+	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
 		<h1 id="introduction">Introduction</h1>
 <p>This article will explain how boosting items work in Adventure Quest Worlds.
