--- a/aqw/am-hp-tuner/index.html
+++ b/aqw/am-hp-tuner/index.html
@@ -1,9 +1,15 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/aqw.css">
+<link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>
+	AQW Archmage HP Tuner
+</title>
 
 </head>
 <body>
+	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Archmage HP Tuner</p>
+	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
 		<h1 id="the-tool">The Tool</h1>
 <ol>
