--- a/aqw/index.html
+++ b/aqw/index.html
@@ -1,5 +1,6 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/aqw.css">
+<link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 </head>
