--- a/aqw/malgor/index.html
+++ b/aqw/malgor/index.html
@@ -1,9 +1,15 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/aqw.css">
+<link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>
+	AQW Ultra Malgor Guide
+</title>
 
 </head>
 <body>
+	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Ultra Malgor Guide</p>
+	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
 		<h1 id="introduction">Introduction</h1>
 <p>Malgor, The First Speaker at <code>/join ultraspeaker</code> is currently the most complicated, but also most rewarding Ultra to beat.
