add image to tyndarius

--- a/aqw/tyndarius/index.html
+++ b/aqw/tyndarius/index.html
@@ -47,6 +47,7 @@ Almost all attacks are <abbr title="Area of Effect, hits multiple targets">AoE</
 <p>The ArchPaladin is the tankiest one, so it&rsquo;s their job to taunt Tyndarius himself.</p>
 <p>The Legion Revenant and the DPS role will taunt the two orbs. It&rsquo;s best to agree which of them goes left, and which of them goes right before the fight. If your target dies, help killing the other orb, or attack Tyndarius.</p>
 <p>The Lord of Order doesn&rsquo;t need to taunt anything, so they can just his the boss and loop their damage spells.</p>
+<p><img src="/img/aqw/tynda1.png" alt=""></p>
 <p>If the Orbs respawn, the same player who taunted them first should go back to them. Repeat until Tyndarius is dead.</p>
 </article>
 </body>
