add malgor animation

--- a/aqw/malgor/index.html
+++ b/aqw/malgor/index.html
@@ -108,6 +108,7 @@ Notice that they will always happen in this order: First a Truth, then a Listen,
 When you see the voice line associated with your taunt, use your scroll.
 Sometimes you&rsquo;re expected to taunt two spells right after one another.
 In this case, just taunt the first one - the taunt lasts long enough to cover the second one as well.</p>
+<h2 id="click-here-to-see-an-animationimgaqwmalgyrotygif"><a href="/img/aqw/malgyroty.gif">Click here to see an animation</a></h2>
 <h1 id="classes-1">Classes</h1>
 <h2 id="stonecrusher">StoneCrusher</h2>
 <p>StoneCrusher is the easiest of the four classes with no advanced mechanics besides the boss&rsquo; own.
