--- a/aqw/malgor/index.html
+++ b/aqw/malgor/index.html
@@ -12,8 +12,8 @@
 	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
 		<h1 id="introduction">Introduction</h1>
-<p>Malgor, The First Speaker at <code>/join ultraspeaker</code> is currently the most complicated, but also most rewarding Ultra to beat.
-His Insignias offer <a href="http://aqwwiki.wikidot.com/radiant-goddess-of-war">Radiant Goddess of War</a>, the best-in-slot <a href="../boost-items">boost</a> armor for all situations.
+<p>Malgor, The First Speaker at <code>/join ultraspeaker</code> is currently the most complicated, but also most rewarding Ultra to beat.</p>
+<p>His Insignias offer <a href="http://aqwwiki.wikidot.com/radiant-goddess-of-war">Radiant Goddess of War</a>, the best-in-slot <a href="../boost-items">boost</a> armor for all situations.
 Most players tend to get <a href="http://aqwwiki.wikidot.com/forge-weapon-enhancements">Dauntless</a> first though, because of how overpowered that enhancement is on some classes.</p>
 <details>
     <summary>Spoiler: Main Story, Malgor Questline</summary>
