--- a/aqw/dage/index.html
+++ b/aqw/dage/index.html
@@ -56,7 +56,7 @@ Your healing skill is 3 - do not use it.</p>
 Not always ran because you can&rsquo;t use your 4 - skill as it heals you.</p>
 <p>There is a trick with LR:
 Enter PvP with an ArchPaladin, have them use 4 on you.</p>
-<p>This will reduce your HoT from 4 by 90%. Due to how HoTs work, this decrease will stay even after the debuff from AP expires.</p>
+<p>This will reduce your HoT from 4 by 90%. Due to how HoTs work, this decrease will stay even after the debuff from AP expires. Absolution makes this even more effective.</p>
 <p>Keep this reduced HoT looped and you&rsquo;re free to run LR to your heart&rsquo;s content.</p>
 <h2 id="equipment">Equipment</h2>
 <p><strong>Dage is not an Undead</strong>.
@@ -99,6 +99,9 @@ This is why we need to take different classes for the Dage fight, and why we nee
 </li>
 </ul>
 <p>Noxious Decay is applied throughout the whole fight with the exception of one brief moment.</p>
+<p><img src="/img/aqw/dage2.gif" alt=""></p>
+<p>Dage stops attacking while he&rsquo;s using his Mages.
+You can technically heal when Noxious Decay has expired.</p>
 <h2 id="zones">Zones</h2>
 <p><img src="/img/aqw/dage1.gif" alt=""></p>
 <p>If you fought Chaos Lord Ledgermayne, you must be familiar with this move.
