add title to home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="/css/aqw.css">
 <link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>Nandixer</title>
 
 </head>
 <body>
