add chrono guide

--- a/archmage-vainglory/index.html
+++ b/archmage-vainglory/index.html
@@ -37,7 +37,7 @@ You also need to temporarily stop using your 3, reducing DPS.</p>
 </ul>
 <h1 id="the-plan">The Plan</h1>
 <p>Very simple.
-We get out Corporeal HoT so high that it outheals the fully-stacked Acheron DoT <em>despite Vainglory</em>.
+We get our Corporeal HoT so high that it outheals the fully-stacked Acheron DoT <em>despite Vainglory</em>.
 We take advantage of HoT squaring to achieve this.
 This way we can have our cake and eat it too.</p>
 <p>As an added benefit, the DoT will keep our health low for the purposes of our 4 skill.
