update forge guide

--- a/what-chrono-to-get/index.html
+++ b/what-chrono-to-get/index.html
@@ -27,13 +27,13 @@ CMP also represents the essence of Calendar classes really well - the damage sta
 <p>One downside is that the class is incredibly boring and 2 of its 4 skills are essentially useless.</p>
 <p>Its main use case is chainkilling bosses in a team.
 For all other scenarios, other Chronos beat it.
-That said, you&rsquo;ll likely get the fastest kill with this one.</p>
+That said, you&rsquo;ll likely get the fastest kills with this one.</p>
 <p><strong>Great first Chrono to get for farming bosses.</strong></p>
 <h2 id="2012-chronocorruptor--chrono-chaorruptor">2012 ChronoCorruptor / Chrono Chaorruptor</h2>
 <p>What can I say about ChronoCorruptor?
 It tries to be a crit Chrono, it tries to be a DoT Chrono, and sort of just fails at both.</p>
 <p>The nuke frequently noncrits if you can land it at all.</p>
-<p>Yes, it&rsquo;s performance can be improved with Elysium or Dauntless, but wouldn&rsquo;t you rather just use those enhancements on an already good class?</p>
+<p>Yes, its performance can be improved with Elysium or Dauntless, but wouldn&rsquo;t you rather just use those enhancements on an already good class?</p>
 <p><strong>Not recommended.</strong></p>
 <h2 id="2013-timekeeper--timekiller">2013 TimeKeeper / TimeKiller</h2>
 <p>I have to admit, I&rsquo;m partial against TimeKeeper because it directly competes with my two favorite classes (coming later in this list) as a dodge class.
@@ -55,7 +55,7 @@ These days, you would prefer QCM or PCM in a team, but that doesn&rsquo;t make C
 <h2 id="2016-infinity-knight--interstellar-knight">2016 Infinity Knight / Interstellar Knight</h2>
 <p>This class is just bad.</p>
 <p>The DoT has a longer cooldown than SSoT&rsquo;s nuke.
-Of course Infinity Knight&rsquo;s DoT ticks twice as opposed to SSoT&rsquo;s two nukes&hellip; except Infinity Knight doesn&rsquo;t have a Rift mechanic, meaning it&rsquo;s just a regular old DoT.</p>
+Of course Infinity Knight&rsquo;s DoT ticks three times as opposed to SSoT&rsquo;s two nukes&hellip; except Infinity Knight doesn&rsquo;t have a Rift mechanic, meaning it&rsquo;s just a regular old DoT.</p>
 <p>Yes, you technically could use Arachnomancer to buff your damage over time, but same goes for SSoT.</p>
 <p>Infinity Knight takes time to ramp up its damage and even then it&rsquo;s nothing exceptional.</p>
 <p><strong>Not recommended.</strong></p>
@@ -66,7 +66,7 @@ Of course Infinity Knight&rsquo;s DoT ticks twice as opposed to SSoT&rsquo;s two
 <p><strong>Great general-use chrono if you don&rsquo;t mind learning its spell rotation. You will be happy with it.</strong></p>
 <h2 id="2018-eternal-chronomancer--immortal-chronomancer">2018 Eternal Chronomancer / Immortal Chronomancer</h2>
 <p>Would you like a physical CDK with some self-sustain and a higher <abbr title="The factor by which you multiply your damage when nuking">Rift Multiplier</abbr>?</p>
-<p>Immortal Chronomancer has an easy, but length combo, which set up a massive nuke.</p>
+<p>Immortal Chronomancer has an easy, but lengthy combo, which sets up a massive nuke.</p>
 <p>Suffers from the same drawback as CDK where it overkills most enemies.</p>
 <p>But it&rsquo;s also the <a href="https://www.youtube.com/shorts/px15ch3EVDI">highest hitting</a> Calendar class in the game.</p>
 <p><strong>Neither bad nor good. Get if you want big crits.</strong></p>
