--- a/forge/index.html
+++ b/forge/index.html
@@ -29,7 +29,7 @@ The hit chance debuff on the enemy helps classes that can&rsquo;t otherwise reac
 <p>Smite works really well on a few classes who come with a high damage boost and a cooldown on their 5-skill of 15 seconds.
 To name a few, <strong>Void Highlord</strong>, <strong>LightCaster</strong>, and <strong>ShadowStalker of Time</strong>.</p>
 <h2 id="praxis">Praxis</h2>
-<h3 id="25">2/5</h3>
+<h3 id="35-2">3/5</h3>
 <p>Praxis has some for-fun builds making use of its Spinning Dragon.
 It&rsquo;s also a source of growing DPS for <strong>long fights</strong> such as Ultra Speaker.</p>
 <p>Outside these uses though, it&rsquo;s nothing exceptional.</p>
@@ -45,7 +45,10 @@ There is no class in the game that doesn&rsquo;t benefit from a massive boost to
 This is not the same as <em>all damage taken</em> - it stacks multiplicatively with other damage boosts.</p>
 <p>Arcana is great for <strong>ultra fights</strong>, taken by whoever applies it best, typically <strong>Legion Revenant</strong>.</p>
 <h2 id="acheron">Acheron</h2>
-<h3 id="35-2">3/5</h3>
+<h3 id="25">2/5</h3>
+<p>Acheron is strong, but if you want to loop its buffs and take advantage of its damage, you have to stack a self-DoT.
+This often requires Penitence, and even then, only a few classes can use it, such as <strong>ArchMage</strong>.</p>
+<p>Acheron is strong in the right hands, but its narrow use limits it severely.</p>
 <h2 id="elysium">Elysium</h2>
 <h3 id="45-1">4/5</h3>
 <p>Elysium does not make already good classes better.
