add css to forge

--- a/forge/index.html
+++ b/forge/index.html
@@ -11,7 +11,22 @@
 	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Forge</p>
 	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
-		<h1 id="introduction">Introduction</h1>
+		<style>
+/* Select paragraphs directly followed by an H1 or H2 tag */
+h2 {
+  /* Add bottom shadow to the paragraph */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  /* You can adjust the shadow color and size as needed */
+}
+
+
+h1 {
+  /* Add bottom shadow to the paragraph */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* You can adjust the shadow color and size as needed */
+}
+</style>
+<h1 id="introduction">Introduction</h1>
 <p>I will also put an &ldquo;out of 5&rdquo; rating for each enhancements.
 Keep in mind, this is not an absolute measure of the enhancement&rsquo;s strength, but rather how useful I find it throughout all levels of play.
 For example, Penitence can be boring and weak, but it can be gamechanging for certain ultra fights.
