add videos to webpages

--- a/forge/index.html
+++ b/forge/index.html
@@ -3,12 +3,12 @@
 <link rel="icon" href="/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>
-	AQW Forge
+	AQW Forge Enhancements Guide
 </title>
 
 </head>
 <body>
-	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Forge</p>
+	<p style="text-align: center; font-size: 72px; font-family: Arial, sans-serif; font-weight: bold;">Forge Enhancements Guide</p>
 	<p style="text-align: center;"><a href="../index.html">Back</a></p>
 	<article>
 		<style>
@@ -34,6 +34,9 @@ Praxis deals really high damage, but there are not many scenarios where you coul
 Some niche builds rely on Lacerate, while Elysium doubles the performance of some classes.</p>
 <h1 id="weapons">Weapons</h1>
 <h2 id="base-forge-weapon">Base Forge Weapon</h2>
+<h3 id="15">1/5</h3>
+<p>The stats themselves are good, but falls short in comparison to Luck with Awe Enhancements.
+Do unlock Forge to be able to progress to other enhancements, but I don&rsquo;t recommend using it.</p>
 <h2 id="pacerate">Pacerate</h2>
 <h3 id="35">3/5</h3>
 <p>Despite how early you unlock it, Lacerate is actually pretty good.
@@ -90,7 +93,7 @@ You can use it even for ultra fights.</p>
 <p>Vim is awesome for <strong>dodge</strong> classes, but it also gives plenty of Luck to <strong>crit-based</strong> classes, such as <strong>Void Highlord</strong>, <strong>ShadowStalker of Time</strong>, or even unintuitive options like ArchPaladin.</p>
 <p>Don&rsquo;t use Vim on magical classes, and never use a Forge helmet for ultras.</p>
 <h2 id="examen">Examen</h2>
-<h3 id="15">1/5</h3>
+<h3 id="15-1">1/5</h3>
 <p>Very few classes benefit from high Wisdom. Examen is not that good.</p>
 <h2 id="anima">Anima</h2>
 <h3 id="35-4">3/5</h3>
