--- a/archmage-vainglory/index.html
+++ b/archmage-vainglory/index.html
@@ -15,6 +15,11 @@
 <p>Alright, this guide will be pointlessly complicated AND pointlessly specific.</p>
 <p>Are you in the 1% of players that care about a difference between <code>22k</code> and <code>24k</code> DPS when farming on ArchMage?</p>
 <p>And if you are, do you happen to be in the other 1% to have wasted <abbr title="The 40,000 ACs package will give you a 68% chance of opening Acheron">$100</abbr> on Acheron?</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/uiU8FZBLkXA" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 <h1 id="mechanics">Mechanics</h1>
 <h2 id="acheron">Acheron</h2>
 <p>Acheron, when used, applies a DoT to the user.
