--- a/malgor/index.html
+++ b/malgor/index.html
@@ -27,7 +27,11 @@ A Speaker is a more evolved form of a Mumbler, one of these:</p>
 </details>
 <p>Beating Malgor requires 4 players working as a team.
 Even one player messing up can cause the whole team to wipe, so make sure that your entire team is familiar with the strategy.</p>
-<p>If you prefer video guides, consider watching <a href="https://www.youtube.com/watch?v=IlY9tdErTg8">this one</a>.</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/Q1yFXr_Fpq8" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 <h1 id="what-to-prepare">What To Prepare</h1>
 <p>Before we begin, it&rsquo;s good knowing that Malgor <strong>does not get harder</strong> as the fight goes on.
 The only thing higher DPS gets you is a faster kill and less time to make mistakes.
